<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.view.ViewPager
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_pager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:mContext="com.mxt.anitrend.view.base.activity.SearchResultActivity"
    tools:showIn="@layout/activity_search_result"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" />